// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings renders tabs correctly general 1`] = `
<Base>
  <Base>
    <Base
      maxWidth={960}
    >
      <Tabs
        gap="x10"
      >
        <Link
          as="/apps/some-app/settings/general"
          href="/settings?appSlug=some-app&selectedTab=general"
        >
          <Tab
            active={true}
          >
            <a>
              General
            </a>
          </Tab>
        </Link>
        <Link
          as="/apps/some-app/settings/notifications"
          href="/settings?appSlug=some-app&selectedTab=notifications"
        >
          <Tab
            active={false}
          >
            <a>
              Notifications
            </a>
          </Tab>
        </Link>
      </Tabs>
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="0.125rem"
    />
    <Base
      maxWidth={960}
    >
      <Connect(GeneralSettings)
        appSlug="some-app"
      />
    </Base>
  </Base>
  <Flex
    paddingVertical="x16"
  >
    <AddonFooter
      addonName="Ship"
    />
  </Flex>
</Base>
`;

exports[`Settings renders tabs correctly notifications 1`] = `
<Base>
  <Base>
    <Base
      maxWidth={960}
    >
      <Tabs
        gap="x10"
      >
        <Link
          as="/apps/some-app/settings/general"
          href="/settings?appSlug=some-app&selectedTab=general"
        >
          <Tab
            active={false}
          >
            <a>
              General
            </a>
          </Tab>
        </Link>
        <Link
          as="/apps/some-app/settings/notifications"
          href="/settings?appSlug=some-app&selectedTab=notifications"
        >
          <Tab
            active={true}
          >
            <a>
              Notifications
            </a>
          </Tab>
        </Link>
      </Tabs>
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="0.125rem"
    />
    <Base
      maxWidth={960}
    >
      <Connect(NotificationSettings)
        appSlug="some-app"
      />
    </Base>
  </Base>
  <Flex
    paddingVertical="x16"
  >
    <AddonFooter
      addonName="Ship"
    />
  </Flex>
</Base>
`;

exports[`Settings renders tabs correctly other 1`] = `
<Base>
  <Base>
    <Base
      maxWidth={960}
    >
      <Tabs
        gap="x10"
      >
        <Link
          as="/apps/some-app/settings/general"
          href="/settings?appSlug=some-app&selectedTab=general"
        >
          <Tab
            active={false}
          >
            <a>
              General
            </a>
          </Tab>
        </Link>
        <Link
          as="/apps/some-app/settings/notifications"
          href="/settings?appSlug=some-app&selectedTab=notifications"
        >
          <Tab
            active={false}
          >
            <a>
              Notifications
            </a>
          </Tab>
        </Link>
      </Tabs>
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="0.125rem"
    />
    <Base
      maxWidth={960}
    >
      <h1>
        other
      </h1>
    </Base>
  </Base>
  <Flex
    paddingVertical="x16"
  >
    <AddonFooter
      addonName="Ship"
    />
  </Flex>
</Base>
`;
